--- a/app/detail/detail.template.html
+++ b/app/detail/detail.template.html
@@ -1489,7 +1489,7 @@
                         src="./img/fund-info_btn_010.png" width="146" height="24" alt="インデックス型"></a></li>
 
                 <!-- コメントアウト
-                <li><a href="/fund/search/?t=mmf" class="bajl-rollover"><img src="/assets/img/fund-info_btn_011.png" width="146" height="24" alt="MMF" /></a></li>
+                <li><a href="/fund/search/?t=mmf" class="bajl-rollover"><img src="/img/fund-info_btn_011.png" width="146" height="24" alt="MMF" /></a></li>
                 コメントアウト -->
 
                 <li><a href="http://www.tdasset.co.jp/fund/search/?t=definedcontribution" class="bajl-rollover"><img
