Signed-off-by: xuguanfeng <18657604670@163.com>

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
 <script src="list/list.js"></script>
 <script src="common/filter.js"></script>
 <script src="detail/detail.js"></script>
+<script src="service/fund/fund.service.js"></script>
 <script src="components/version/version.js"></script>
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
