--- a/app/list/list.template.html
+++ b/app/list/list.template.html
@@ -33,7 +33,7 @@
 
 
 <!-- [[[ HEADER-AREA ]]] -->
-<div id="header-area" class="bass-frame" ng-controller="listCtrl">
+<div id="header-area" class="bass-frame" >
     <div class="bass-frame-content">
 
 
