--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,14 @@
 <script src="components/version/version-directive.js"></script>
 <script src="components/version/interpolate-filter.js"></script>
 
+<script src="common/highchart/jquery-1.9.1.min.js"></script>
+<script src="common/highchart/highstock.js"></script>
+<script src="common/highchart/exporting.js"></script>
+<script src="common/highchart/highStyle.js"></script>
+<script src="common/highchart/dateformat.js"></script>
+<script src="common/highchart/displayChart.js"></script>
+
+
 <!--<script src="app.module.js"></script>-->
 
 </body>
