--- a/app/index.html
+++ b/app/index.html
@@ -52,10 +52,15 @@
 
 <script src="common/highchart/jquery-1.9.1.min.js"></script>
 <script src="common/highchart/highstock.js"></script>
+<!--<script src="http://code.highcharts.com/stock/highstock.src.js"></script>-->
 <script src="common/highchart/exporting.js"></script>
 <script src="common/highchart/highStyle.js"></script>
 <script src="common/highchart/dateformat.js"></script>
 <script src="common/highchart/displayChart.js"></script>
+<script src="common/highchart/highcharts-ng.js"></script>
+
+
+
 
 
 <!--<script src="app.module.js"></script>-->
